mejoras del diseño de SHARED_FILES

--- a/src/app/feature/falcon/dashboard/saas/falcon-dashboard-saas-shared-files/falcon-dashboard-saas-shared-files.component.html
+++ b/src/app/feature/falcon/dashboard/saas/falcon-dashboard-saas-shared-files/falcon-dashboard-saas-shared-files.component.html
@@ -1,24 +1,94 @@
-<div class="flex justify-center mt-10 card w-96 bg-base-100 border border-slate-200 drop-shadow-md rounded-sm">
 
-    <div class="flex flex-row justify-center px-3  card w-96 bg-slate-50 border border-slate-200 drop-shadow-md rounded-sm">
-      <span>Shared Files</span>
-      <span class="grow"></span>
-      <a class="link link-hover text-blue-600">View All</a>
+
+<div class="border w-2/5 shadow-md">
+  <div class="flex bg-slate-50">
+    <div class="grow p-2">
+      <h6 class="text-gray-800">Shared Files</h6>
     </div>
-
-    <div class="px-3 py-2 flex flex-row">
-      <img src="https://falconreact.prium.me/static/media/5.09ac6a83.jpg" alt="smart watch" class="h-10 w-10">
-      <div class="flex flex-col pl-1">
-        <a class="link link-hover text-gray-600 text-sm">apple-smart-watch.png</a>
-        <div class="flex flex-row">
-            <div class="pr-2"><span class="semi-bold text-gray-500 text-xs">Antony </span> </div>
-            <div><span class="semi-bold text-gray-500 text-xs">Just Now </span> </div>
-        </div>
-      </div>
-      <span class="grow"></span>
-      <div class="pr-1"><a role="button" href="https://falconreact.prium.me/static/media/cloud-download.2dc713ed.svg" download="" class="btn btn-outline btn-info btn-xs"><img src="https://falconreact.prium.me/static/media/cloud-download.2dc713ed.svg" alt="Download" width="15"></a></div>
-      <div><button class="btn btn-outline btn-info btn-xs"><img src="https://falconreact.prium.me/static/media/edit-alt.e9942aac.svg" alt="Edit" width="15"></button></div>
-
+    <div>
+      <button class="btn btn-link font-sans">View All</button>
     </div>
+  </div>
+  <div class="flex flex-wrap p-2 gap-4 ">
+    <div class="w-1/5">
+      <img class="w-14 h-14" src="https://falconreact.prium.me/static/media/5.09ac6a83.jpg" />
+    </div>
+    <div class="group w-3/4 justify-items-start py-2">
+      <p class="hover:underline font-bold cursor-pointer">  apple-smart-watch.png</p>
 
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 text-slate-800 absolute ml-48 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/860/860802.png" alt="" />
+      </button>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 absolute ml-56 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/2623/2623081.png" alt="" />
+      </button>
+      <p class="text-slate-500">Anthony Just now</p>
+    </div>
+    
+    <div class="w-1/5">
+      <img class="w-14 h-14"
+        src="https://falconreact.prium.me/static/media/3.ba98a1ec.jpg" />
+    </div>
+    <div class="group w-3/4 justify-items-start py-2">
+      <p class="hover:underline font-bold cursor-pointer">iphone.jpg</p>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 text-slate-800 absolute ml-48 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/860/860802.png" alt="" />
+      </button>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 absolute ml-56 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/2623/2623081.png" alt="" />
+      </button>
+      <p class="text-slate-500">Anthony Yesterday at 1:30 PM</p>
+    </div>
+    <div class="w-1/5">
+      <img class="w-14 h-14"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTuyritj-Qc3Dyb4qEbrX755hOXUCtZEj42IQ&usqp=CAU" />
+    </div>
+    <div class="group w-3/4 justify-items-start py-2">
+      <p class="hover:underline font-bold cursor-pointer">falcon V1.8.2</p>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 text-slate-800 absolute ml-48 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/860/860802.png" alt="" />
+      </button>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 absolute ml-56 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/2623/2623081.png" alt="" />
+      </button>
+      <p class="text-slate-500">Jane 27 Sep at 10:30 PM</p>
+    </div>
+    <div class="w-1/5">
+      <img class="w-14 h-14" src="https://falconreact.prium.me/static/media/2.2001c1c3.jpg" />
+    </div>
+    <div class="group w-3/4 justify-items-start py-2">
+      <p class="hover:underline font-bold cursor-pointer">iMac.jpg</p>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 text-slate-800 absolute ml-48 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/860/860802.png" alt="" />
+      </button>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 absolute ml-56 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/2623/2623081.png" alt="" />
+      </button>
+      <p class="text-slate-500">Rowen 23 Sep at 6:10 PM</p>
+    </div>
+    <div class="w-1/5">
+      <img class="w-14 h-14" src="https://prints.ultracoloringpages.com/80fb4e09be5d499a0126ae36f0020f30.png" />
+    </div>
+    <div class="group w-3/4 justify-items-start py-2">
+      <p class="hover:underline font-bold cursor-pointer">funtions.php</p>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 text-slate-800 absolute ml-48 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/860/860802.png" alt="" />
+      </button>
+      <button
+        class="hidden group-hover:block btn btn-xs bg-slate-100 border-hidden hover:bg-slate-400 absolute ml-56 my-1">
+        <img class="w-4" src="https://cdn-icons-png.flaticon.com/512/2623/2623081.png" alt="" />
+      </button>
+      <p class="text-slate-500">Jhon 1 Oct at 4:30 PN</p>
+    </div>
+  </div>
 </div>
+
