arreglos del diseño de GROS_REVENUE

--- a/src/app/feature/falcon/dashboard/saas/falcon-dashboard-saas-gross-revenue/falcon-dashboard-saas-gross-revenue.component.html
+++ b/src/app/feature/falcon/dashboard/saas/falcon-dashboard-saas-gross-revenue/falcon-dashboard-saas-gross-revenue.component.html
@@ -1,1 +1,82 @@
-<p>falcon-dashboard-saas-gross-revenue works!</p>
+<div class="border border-gray-400 h-auto w-fit rounded-lg">
+  <div class="flex items-center p-3">
+
+      <div class="flex-colum pl-3 ">
+        <span >Gross revenue</span>
+        <div class="pr-2 flex-row">
+           <span class="text-blue-600 pb-4 text-2xl font-extrabold pr-2">$165.50</span>
+           <div class="badge   badge-xs bg-blue-100  border-blue-200 text-gray-800 "><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="caret-up" class="h-2 w-3 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentColor" d="M288.662 352H31.338c-17.818 0-26.741-21.543-14.142-34.142l128.662-128.662c7.81-7.81 20.474-7.81 28.284 0l128.662 128.662c12.6 12.599 3.676 34.142-14.142 34.142z"></path></svg>  5%</div>
+        </div>
+
+      </div>
+
+      <span class="grow"></span>
+
+      <div class="align">
+        <select class="select select-bordered select-sm">
+            <option>Jan</option>
+            <option>Feb</option>
+            <option>Mar</option>
+            <option>Apr</option>
+            <option>May</option>
+            <option>Jun</option>
+            <option>Jul</option>
+            <option>Aug</option>
+            <option>Sep</option>
+            <option>Oct</option>
+            <option>Nov</option>
+            <option>Dec</option>
+        </select>
+    </div>
+  </div>
+  <div>
+      <table class="table">
+
+          <tbody>
+              <tr>
+
+                  <td class="text-center text-gray-500 ">Point of sale</td>
+                  <td></td>
+                  <td class="text-center text-gray-500">$791.64</td>
+                  <td></td>
+                  <td class="text-center text-gray-500 flex dlex-row"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="long-arrow-alt-down" class="w-4 h-4" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="red" d="M168 345.941V44c0-6.627-5.373-12-12-12h-56c-6.627 0-12 5.373-12 12v301.941H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.569 9.373 33.941 0l86.059-86.059c15.119-15.119 4.411-40.971-16.971-40.971H168z"></path></svg> 13%</td>
+
+              </tr>
+              <tr>
+
+                  <td class="text-center text-gray-500">Online Store</td>
+                  <td></td>
+                  <td class="text-center text-gray-500">$113.86</td>
+                    <td></td>
+                  <td class="text-center text-gray-500 flex flex-row"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="long-arrow-alt-up" class="w-4 h-4 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="green" d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"></path></svg>178 %</td>
+
+              </tr>
+              <tr>
+                  <td class="text-center text-gray-500">Online Store</td>
+                  <td></td>
+                  <td class="text-center text-gray-500">$0.00</td>
+                  <td></td>
+                  <td class="text-center text-gray-900" style="max-width: 20%;">-</td>
+              </tr>
+              <tr>
+                  <td>Sales Overtime</td>
+              </tr>
+              <tr>
+                <td>grafica</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>
+                  <a type=button href="" class=" p-1 font-semibold text-blue-500 flex items-center text-sm"> View Report >  </a>
+                </td>
+              </tr>
+          </tbody>
+
+      </table>
+  </div>
+</div>
+
+
