--- a/src/app/feature/falcon/dasboard/saas-customers/saas-customers.component.html
+++ b/src/app/feature/falcon/dasboard/saas-customers/saas-customers.component.html
@@ -1,4 +1,4 @@
-<div   class="flex relative stats shadow bg- bg-gradient-to-r from-white  via-white to-orange-600 max-w-xs">
+<div   class="flex relative rounded-md shadow-xl bg-gradient-to-r from-white  via-white to-orange-600 max-w-xs">
 
   <div class="stat">
     <div class="stat-figure text-secondary">
@@ -14,6 +14,6 @@
     </div>
   </div>
   <div>
-   <h2 class="link link-hover text-sky-800 mt-20 -ml-72" href="#">See all></h2>
+   <h2 class="link link-hover text-sky-800 mt-24 -ml-72" href="#">See all></h2>
   </div>
 </div>
