--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -126,6 +126,7 @@
             <li><a [routerLink]="['falcon-dashboard-e-commerce-Shopping-Cart']">Shopping Cart</a></li>
             <li><a [routerLink]="['allorden']">All Orders</a></li>
             <li><a [routerLink]="['revenues']">Revenues</a></li>
+            <li><a [routerLink]="['forms']">Example</a></li>
         </div>
     </div>
 </ul>
