--- a/src/app/feature/falcon/forms/forms.component.html
+++ b/src/app/feature/falcon/forms/forms.component.html
@@ -5,7 +5,7 @@
   <div class=" absolute right-44  mt-4">
      <button class="btn btn-sm bg-gray-50 text-black w-20">Code</button>
   </div>
-  <h2 class="font-medium text-xl p-4">Example</h2>
+ <h2 class="font-medium text-xl p-4 peer">Example</h2>
  <h2 class="p-4">Email address</h2>
  <input type="text" placeholder="Name@example.com" class="  input input-info w-11/12 ml-4 " />
  <h2 class="p-4 text-gray-800">Example textarea</h2>
