--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -79,7 +79,7 @@
             <li><a [routerLink]="['falcon-dashboard-analytics-campaigns']">Ad campaigns perfomance</a></li>
             <li><a [routerLink]="['falcon-dasboard-Management-Team-progress']">Team Progress</a></li>
             <li><a [routerLink]="['falcon-dasboard-E-commerce-Good-Afternoon']">Good-Afternoon!</a></li>
-            <li><a [routerLink]="['Falcon-dashboard-crm-weclometo']">Welcome to</a></li> 
+            <li><a [routerLink]="['Falcon-dashboard-crm-weclometo']">Welcome to</a></li>
             <li><a [routerLink]="['falcon-e-commerce-Total-Sales']">Total Sales </a></li>
             <li><a [routerLink]="['Falcon-dashboard-Social-create-post']">Create Post</a></li>
             <li><a [routerLink]="['Falcon-dashboard-Social-Add-to-your-feed']">Add to your feed</a></li>
@@ -145,6 +145,7 @@
             <li><a [routerLink]="['falcon-saas-conversion']">Conversion</a></li>
             <li><a [routerLink]="['falcon-APP-eemail-eemail-detail']">Email Datail</a></li>
             <li><a [routerLink]="['falcon-saas-customers']">Customers</a></li>
+            <li><a [routerLink]="['falcon-saas-today']">Today</a></li>
 
         </div>
     </div>
