--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -124,8 +124,7 @@
             <li><a [routerLink]="['falcon-events-events-details-date-and-time']">Date and Time</a></li>
             <li><a [routerLink]="['falcon-events-events-details-events-you-may-like']">Events you may like</a></li>
             <li><a [routerLink]="['falcon-events-events-list']">Events List</a></li>
-            
-
+            <li><a [routerLink]="['falcon-events-events-details-FREE-New-Year']">FREE New Year's Eve </a></li>
         </div>
     </div>
 </ul>
