agrega New Year's Eve on the Waterfront

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -125,6 +125,7 @@
             <li><a [routerLink]="['falcon-events-events-details-events-you-may-like']">Events you may like</a></li>
             <li><a [routerLink]="['falcon-events-events-list']">Events List</a></li>
             <li><a [routerLink]="['falcon-events-events-details-FREE-New-Year']">FREE New Year's Eve </a></li>
+            <li><a [routerLink]="['falcon-events-events-details-New-Year']">New Year's Eve on the Waterfront</a></li>
         </div>
     </div>
 </ul>
