--- a/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-grid-detais/falcon-e-commerce-product-grid-detais.component.html
+++ b/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-grid-detais/falcon-e-commerce-product-grid-detais.component.html
@@ -191,6 +191,35 @@
     </div>
     </div>
 
+    <div class="pl-96 ">
+      <div class="pl-28">
+        <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+          <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+            hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> <
+          </label>
+          </div>
+          <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+            <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+              hover:shadow-md hover:bg-gray-100 text-blue-600 font-semibold text-xl"> 1
+            </label>
+            </div>
+            <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+              <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> 2
+              </label>
+              </div>
+              <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+                <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                  hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> 3
+                </label>
+                </div>
+                <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black  pl-2">
+                  <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                    hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> >
+                  </label>
+                  </div>
+                </div>
+              </div>
 
 <!--
 <div class="hero min-h-screen bg-base-200">
@@ -398,10 +427,74 @@
   </div>
   </div>
 
+  <div class="pl-96 ">
+    <div class="pl-28">
+      <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+        <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+          hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> <
+        </label>
+        </div>
+        <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+          <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+            hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> 1
+          </label>
+          </div>
+          <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+            <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+              hover:shadow-md hover:bg-gray-100 text-blue-600 font-semibold text-xl"> 2
+            </label>
+            </div>
+            <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+              <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> 3
+              </label>
+              </div>
+              <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black  pl-2">
+                <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                  hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> >
+                </label>
+                </div>
+              </div>
+            </div>
+<!---->
+<div class="w-full pl-82">
+  <div class="card card-side bg-base-100 shadow-xl w-full h-96">
+    <figure><img src="https://falconreact.prium.me/static/media/6.14365250.jpg"/></figure>
+    <div class="card-body">
+      <h2 class="card-title">Logitech G305 Gaming Mouse</h2>
+      <a class="link link-hover text-blue-500">Computer & Accessories</a>
+      <div class="flex items-stretch ... ">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+        <div class="py-4"> </div>
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+        <div class="py-4"></div>
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+        <div class="py-4"></div>
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+        <div class="py-4"></div>
+        <div class="text-gray-500">(14)</div>
+      </div>
+      <p>Testing conducted by Apple in October 2018 using pre-production 2.9GHz 6‑core Intel Core i9‑based 15-inch MacBook Pro systems with Radeon Pro Vega 20 graphics, and shipping 2.9GHz 6‑core Intel Core i9‑based 15‑inch MacBook Pro systems with Radeon Pro 560X graphics, both configured with 32GB of RAM and 4TB SSD.</p>
+      <h3 class="text-base text-gray-500">
+        Shipping Cost: $50
+    </h3>
+    <h4 class="text-sm ">
+        Stock: <span class="text-emerald-400	font-medium ">Available</span>
+    </h4>
+      <h1 class="card-title text-orange-500 text-2xl">
+        $1199.5 <del class="ms-2 fs--1 text-gray-400 text-sm">$2399</del> <span class="text-gray-400 text-sm">-50%</span>
+    </h1>
+      <div class="card-actions justify-end">
+        <button class="btn btn-primary">Watch</button>
+      </div>
+    </div>
+  </div>
 
+</div>
 
   <div class="h-56 grid grid-cols-3 gap-4 content-start ...">
     <div>
+    <h1 class="font-bold">DESCRIPTION</h1>
       Over the years, Apple has built a reputation for releasing its products with a lot of fanfare - but that didn’t exactly happen for the MacBook Pro 2018. Rather, Apple’s latest pro laptop experienced a subdued launch, in spite of it offering a notable spec upgrade over the 2017 model – along with an improved idboard. And, as with previous generations the 15-inch MacBook Pro arrives alongside a 13-inch model.
 
       Apple still loves the MacBook Pro though, despite the quiet release. This is because, while the iPhone XS and iPad, along with the 12-inch MacBook, are aimed at everyday consumers, the MacBook Pro has always aimed at the creative and professional audience. This new MacBook Pro brings a level of performance (and price) unlike its more consumer-oriented devices.
@@ -413,8 +506,9 @@
       It's build quality and design is batter than elit. Numquam excepturi a debitis, sint voluptates, nam odit vel delectus id repellendus vero reprehenderit quidem totam praesentium vitae nesciunt deserunt. Sint, veniam?
     </div>
     <div>
-      <table class="border-collapse border border-slate-300 ... w-96 h-80">
+      <table class="border-collapse border border-slate-300 ... w-96 h-96">
         <thead>
+    <h1 class="font-bold">DESCRIPTION</h1>
           <tr>
             <td class="border border-slate-300 ... bg-gray-100">Processor</td>
             <td class="border border-slate-300 ...">2.3GHz quad-core Intel Core i5</td>
@@ -456,5 +550,28 @@
         </tbody>
       </table>
     </div>
-    <div>03</div>
+    <div>
+      <div class="form-control w-full max-w-xs">
+        <label class="label font-bold">
+          <span class="label-text text-red-600 ">Name</span>
+        </label>
+        <input type="text" class="input input-bordered w-full max-w-xs" />
+      </div>
+      <div class="form-control">
+        <label class="label font-bold">
+          <span class="label-text">Review:</span>
+        </label>
+        <textarea class="textarea textarea-bordered h-24"></textarea>
+      </div>
+    </div>
   </div>
+
+
+  <div class="rating rating-md">
+    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+    <input type="radio" name="rating-7" class="mask mask-star-2 mask-half-1 bg-orange-400"  />
+    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400"  checked/>
+    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+    <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
+  </div>
+
