arreglos del codigo event details

--- a/src/app/feature/falcon/event/falcon-app-event-event-details/falcon-app-event-event-details.component.html
+++ b/src/app/feature/falcon/event/falcon-app-event-event-details/falcon-app-event-event-details.component.html
@@ -142,30 +142,19 @@
 
       <div class="grid-cols-1">
         <label class="form-label Flex Flex-row" for="startTime">Start Time</label>
-        <div>
-          <input placeholder="H:i" name="startTime" id="startTime" class="form-control input-info input-group-sm w-48 rounded-sm" value="">
-        </div>
-        <div>
-          <div class="numInputWrapper"><input class="numInput flatpickr-hour" type="number" aria-label="Hour" tabindex="-1" step="1" min="1" max="12" maxlength="2"><span class="arrowUp"></span><span class="arrowDown"></span></div>
-        </div>
-        <div>
-          <span class="flatpickr-time-separator">:</span>
-        </div>
-        <div>
-          <div class="numInputWrapper"><input class="numInput flatpickr-minute" type="number" aria-label="Minute" tabindex="-1" step="5" min="0" max="59" maxlength="2"><span class="arrowUp"></span><span class="arrowDown"></span></div>
-        </div>
-        <div>
-          <span class="arrowUp"></span>
-        </div>
-          <div>
-            <span class="arrowUp"></span>
-          </div>
-          <div>
-            <span class="arrowDown"></span>
-          </div>
-          <div>
-            <span class="flatpickr-am-pm" title="Click to toggle" tabindex="-1">PM</span>
-          </div>
+        <select class="select select-bordered w-full max-w-xs">
+          <option disabled selected>H:i</option>
+          <option></option>
+          <option>Han Solo</option>
+          <option>Han Solo</option>
+          <option>Han Solo</option>
+          <option>Han Solo</option>
+          <option>Han Solo</option>
+          <option>Han Solo</option>
+          <option>Han Solo</option>
+          <option>Han Solo</option>
+          <option>Greedo</option>
+        </select>
 
 
 
@@ -480,3 +469,5 @@
    <textarea rows="6" name="description" id="description" class="form-control input-info input-group-sm w-96 h-16 rounded-sm border border-gray-400 "></textarea>
   </div>
 </div>
+
+
