--- a/src/app/feature/falcon/event/falcon-app-event-event-details/falcon-app-event-event-details.component.html
+++ b/src/app/feature/falcon/event/falcon-app-event-event-details/falcon-app-event-event-details.component.html
@@ -38,7 +38,7 @@
                                       <path _ngcontent-qfb-c81="" d="M13.25 8.75L9.75 12l3.5 3.25" stroke-width="1.5"
                                           stroke-linecap="round" stroke-linejoin="round"></path>
                                   </svg></button>
-                              <div _ngcontent-qfb-c81="" class="text-sm font-semibold">February</div><button
+                              <div _ngcontent-qfb-c81="" class="text-sm font-semibold">Octuber 2022</div><button
                                   _ngcontent-qfb-c81=""
                                   class="flex items-center justify-center p-2 rounded-xl hover:bg-gray-50"><svg
                                       _ngcontent-qfb-c81="" fill="none" class="w-6 h-6 text-gray-900 stroke-current">
@@ -144,16 +144,96 @@
         <label class="form-label Flex Flex-row" for="startTime">Start Time</label>
         <select class="select select-bordered w-full max-w-xs">
           <option disabled selected>H:i</option>
-          <option></option>
-          <option>Han Solo</option>
-          <option>Han Solo</option>
-          <option>Han Solo</option>
-          <option>Han Solo</option>
-          <option>Han Solo</option>
-          <option>Han Solo</option>
-          <option>Han Solo</option>
-          <option>Han Solo</option>
-          <option>Greedo</option>
+          <option>12:00 AM</option>
+          <option>12:15 AM</option>
+          <option>12:30 AM</option>
+          <option>12:45 AM</option>
+          <option>1:00 AM</option>
+          <option>1:15 AM</option>
+          <option>1:30 AM</option>
+          <option>1:45 AM</option>
+          <option>2:00 AM</option>
+          <option>2:15 AM</option>
+          <option>2:30 AM</option>
+          <option>2:45 AM</option>
+          <option>3:00 AM</option>
+          <option>3:15 AM</option>
+          <option>3:30 AM</option>
+          <option>3:45 AM</option>
+          <option>4:00 AM</option>
+          <option>4:15 AM</option>
+          <option>4:30 AM</option>
+          <option>4:45 AM</option>
+          <option>5:00 AM</option>
+          <option>5:15 AM</option>
+          <option>5:30 AM</option>
+          <option>5:45 AM</option>
+          <option>6:00 AM</option>
+          <option>6:15 AM</option>
+          <option>6:30 AM</option>
+          <option>6:45 AM</option>
+          <option>7:00 AM</option>
+          <option>7:15 AM</option>
+          <option>7:30 AM</option>
+          <option>7:45 AM</option>
+          <option>8:00 AM</option>
+          <option>8:15 MA</option>
+          <option>8:30 AM</option>
+          <option>8:45 AM</option>
+          <option>9:00 AM</option>
+          <option>9:15 AM</option>
+          <option>9:30 AM</option>
+          <option>9:45 AM</option>
+          <option>10:00 AM</option>
+          <option>10:15 AM</option>
+          <option>10:30 AM</option>
+          <option>10:45 AM</option>
+          <option>11:00 AM</option>
+          <option>11:15 AM</option>
+          <option>11:30 AM</option>
+          <option>12:00 PM</option>
+          <option>12:15 PM</option>
+          <option>12:30 PM</option>
+          <option>1:00 PM</option>
+          <option>1:15 PM</option>
+          <option>1:30 PM</option>
+          <option>1:45 PM</option>
+          <option>2:00 PM</option>
+          <option>2:15 PM</option>
+          <option>2:30 PM</option>
+          <option>2:45 PM</option>
+          <option>3:00 PM</option>
+          <option>3:15 PM</option>
+          <option>3:45 PM</option>
+          <option>4:00 PM</option>
+          <option>4:15 PM</option>
+          <option>4:30 PM</option>
+          <option>4:45 PM</option>
+          <option>5:00 PM</option>
+          <option>5:15 PM</option>
+          <option>5:30 PM</option>
+          <option>5:45 PM</option>
+          <option>6:00 PM</option>
+          <option>6:15 PM</option>
+          <option>6:45 PM</option>
+          <option>7:00 PM</option>
+          <option>7:15 PM</option>
+          <option>7:30 PM</option>
+          <option>7:45 PM</option>
+          <option>8:00 PM</option>
+          <option>8:15 PM</option>
+          <option>8:30 PM</option>
+          <option>8:45 PM</option>
+          <option>9:00 PM</option>
+          <option>9:15 PM</option>
+          <option>9:30 PM</option>
+          <option>9:45 PM</option>
+          <option>10:00 PM</option>
+          <option>10:15 PM</option>
+          <option>10:45 PM</option>
+          <option>11:00 PM</option>
+          <option>11:15 PM</option>
+          <option>11:45 PM</option>
         </select>
 
 
@@ -190,7 +270,7 @@
                                     <path _ngcontent-qfb-c81="" d="M13.25 8.75L9.75 12l3.5 3.25" stroke-width="1.5"
                                         stroke-linecap="round" stroke-linejoin="round"></path>
                                 </svg></button>
-                            <div _ngcontent-qfb-c81="" class="text-sm font-semibold">February</div><button
+                            <div _ngcontent-qfb-c81="" class="text-sm font-semibold">Octuber 2022</div><button
                                 _ngcontent-qfb-c81=""
                                 class="flex items-center justify-center p-2 rounded-xl hover:bg-gray-50"><svg
                                     _ngcontent-qfb-c81="" fill="none" class="w-6 h-6 text-gray-900 stroke-current">
@@ -294,7 +374,99 @@
 
     <div class="grid-cols-1">
       <label class="form-label Flex Flex-row" for="startTime">End Time</label>
-      <input placeholder="H:i" name="startTime" id="startTime" class="form-control input-info input-group-sm w-48 rounded-sm" value="">
+      <select class="select select-bordered w-full max-w-xs">
+        <option disabled selected>H:i</option>
+        <option>12:00 AM</option>
+        <option>12:15 AM</option>
+        <option>12:30 AM</option>
+        <option>12:45 AM</option>
+        <option>1:00 AM</option>
+        <option>1:15 AM</option>
+        <option>1:30 AM</option>
+        <option>1:45 AM</option>
+        <option>2:00 AM</option>
+        <option>2:15 AM</option>
+        <option>2:30 AM</option>
+        <option>2:45 AM</option>
+        <option>3:00 AM</option>
+        <option>3:15 AM</option>
+        <option>3:30 AM</option>
+        <option>3:45 AM</option>
+        <option>4:00 AM</option>
+        <option>4:15 AM</option>
+        <option>4:30 AM</option>
+        <option>4:45 AM</option>
+        <option>5:00 AM</option>
+        <option>5:15 AM</option>
+        <option>5:30 AM</option>
+        <option>5:45 AM</option>
+        <option>6:00 AM</option>
+        <option>6:15 AM</option>
+        <option>6:30 AM</option>
+        <option>6:45 AM</option>
+        <option>7:00 AM</option>
+        <option>7:15 AM</option>
+        <option>7:30 AM</option>
+        <option>7:45 AM</option>
+        <option>8:00 AM</option>
+        <option>8:15 MA</option>
+        <option>8:30 AM</option>
+        <option>8:45 AM</option>
+        <option>9:00 AM</option>
+        <option>9:15 AM</option>
+        <option>9:30 AM</option>
+        <option>9:45 AM</option>
+        <option>10:00 AM</option>
+        <option>10:15 AM</option>
+        <option>10:30 AM</option>
+        <option>10:45 AM</option>
+        <option>11:00 AM</option>
+        <option>11:15 AM</option>
+        <option>11:30 AM</option>
+        <option>12:00 PM</option>
+        <option>12:15 PM</option>
+        <option>12:30 PM</option>
+        <option>1:00 PM</option>
+        <option>1:15 PM</option>
+        <option>1:30 PM</option>
+        <option>1:45 PM</option>
+        <option>2:00 PM</option>
+        <option>2:15 PM</option>
+        <option>2:30 PM</option>
+        <option>2:45 PM</option>
+        <option>3:00 PM</option>
+        <option>3:15 PM</option>
+        <option>3:45 PM</option>
+        <option>4:00 PM</option>
+        <option>4:15 PM</option>
+        <option>4:30 PM</option>
+        <option>4:45 PM</option>
+        <option>5:00 PM</option>
+        <option>5:15 PM</option>
+        <option>5:30 PM</option>
+        <option>5:45 PM</option>
+        <option>6:00 PM</option>
+        <option>6:15 PM</option>
+        <option>6:45 PM</option>
+        <option>7:00 PM</option>
+        <option>7:15 PM</option>
+        <option>7:30 PM</option>
+        <option>7:45 PM</option>
+        <option>8:00 PM</option>
+        <option>8:15 PM</option>
+        <option>8:30 PM</option>
+        <option>8:45 PM</option>
+        <option>9:00 PM</option>
+        <option>9:15 PM</option>
+        <option>9:30 PM</option>
+        <option>9:45 PM</option>
+        <option>10:00 PM</option>
+        <option>10:15 PM</option>
+        <option>10:45 PM</option>
+        <option>11:00 PM</option>
+        <option>11:15 PM</option>
+        <option>11:45 PM</option>
+      </select>
     </div>
   </div>
 
@@ -327,7 +499,7 @@
                                       <path _ngcontent-qfb-c81="" d="M13.25 8.75L9.75 12l3.5 3.25" stroke-width="1.5"
                                           stroke-linecap="round" stroke-linejoin="round"></path>
                                   </svg></button>
-                              <div _ngcontent-qfb-c81="" class="text-sm font-semibold">February</div><button
+                              <div _ngcontent-qfb-c81="" class="text-sm font-semibold">Octuber 2022</div><button
                                   _ngcontent-qfb-c81=""
                                   class="flex items-center justify-center p-2 rounded-xl hover:bg-gray-50"><svg
                                       _ngcontent-qfb-c81="" fill="none" class="w-6 h-6 text-gray-900 stroke-current">
