espera de revicion other info

--- a/src/app/feature/falcon/app/falcon-app-event-other-info/falcon-app-event-other-info.component.html
+++ b/src/app/feature/falcon/app/falcon-app-event-other-info/falcon-app-event-other-info.component.html
@@ -90,14 +90,14 @@
   <div>
     <div class="mb-3 form-check flex items-center p-3">
       <input class="form-check-input" id="customRadio4" type="radio" name="listingPrivacy" checked="checked">
-      <label class="form-label mb-0" for="customRadio4"> <strong>Public page:</strong></label>
+      <label class="form-label mb-0" for="customRadio4"> <strong class="px-2">Public page:</strong></label><br>
       <div class="form-text mt-0">Discoverable by anyone on Falcon, our distribution partners, and search engines.</div>
     </div>
   </div>
   <div>
     <div class="mb-3 form-check flex items-center p-3">
       <input class="form-check-input" id="customRadio5" type="radio" name="listingPrivacy">
-      <label class="form-label mb-0" for="customRadio5"> <strong>Private page:</strong></label>
+      <label class="form-label mb-0" for="customRadio5"> <strong class="px-2">Private page:</strong></label>
       <div class="form-text mt-0">Accessible only by people you specify. </div>
     </div>
   </div>
@@ -110,7 +110,7 @@
   <div>
     <div class="form-check custom-checkbox mb-0 flex items-center p-3">
       <input class="form-check-input" id="customRadio6" type="checkbox">
-      <label class="form-label mb-0" for="customRadio6">Show the number of remaining tickets. </label>
+      <label class="form-label mb-0 px-2" for="customRadio6">Show the number of remaining tickets. </label>
     </div>
   </div>
 </div>
