--- a/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-grid-detais/falcon-e-commerce-product-grid-detais.component.html
+++ b/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-grid-detais/falcon-e-commerce-product-grid-detais.component.html
@@ -221,6 +221,8 @@
                 </div>
               </div>
 
+
+
 <!--
 <div class="hero min-h-screen bg-base-200">
   <div class="hero-content flex-col lg:flex-row">
@@ -456,6 +458,81 @@
                 </div>
               </div>
             </div>
+            <!---->
+            <div class="card w-96 bg-base-100 shadow-xl">
+              <figure><img src="https://falconreact.prium.me/static/media/1.0b0e534e.jpg"
+                      alt="Shoes" /></figure>
+              <div class="card-body">
+                  <a class="link link-hover text-black text-xl font-semibold">Apple MacBook Pro (15" Retina, Touch Bar, 2.2GHz 6-Core Intel Core i7, 16GB RAM, 256GB SSD) - Space Gray (Latest Model)</a>
+                  <a class="link link-hover text-gray-400">Computer & Accessories</a>
+                  <h1 class="card-title text-orange-500 text-2xl">
+                    $7199
+                  </h1>
+                  <h3 class="text-base text-gray-500">
+                      Shipping Cost: $65
+                  </h3>
+                  <h4 class="text-sm ">
+                    Stock: <span class="text-red-600	font-medium ">Sold-Out</span>
+                </h4>
+                  <div class="flex items-stretch ... ">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+                    <div class="py-4"> </div>
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+                    <div class="py-4"></div>
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+                    <div class="py-4"></div>
+                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
+                    <div class="py-4"></div>
+                    <div class="text-gray-500">(20)</div>
+                    <div class="pl-20">
+                    <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black ">
+                      <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                        hover:shadow-md hover:bg-gray-100 text-black">
+                        <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa  w-4 h-4 text-gray-500" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"></path></svg>
+                      </label>
+                      </div>
+                    </div>
+                    <div class="pl-2">
+                      <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black ">
+                        <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                          hover:shadow-md hover:bg-gray-100 text-black">
+                          <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="cart-plus" class="svg-inline--fa fa-cart-plus w-18 h-4 text-gray-500" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M504.717 320H211.572l6.545 32h268.418c15.401 0 26.816 14.301 23.403 29.319l-5.517 24.276C523.112 414.668 536 433.828 536 456c0 31.202-25.519 56.444-56.824 55.994-29.823-.429-54.35-24.631-55.155-54.447-.44-16.287 6.085-31.049 16.803-41.548H231.176C241.553 426.165 248 440.326 248 456c0 31.813-26.528 57.431-58.67 55.938-28.54-1.325-51.751-24.385-53.251-52.917-1.158-22.034 10.436-41.455 28.051-51.586L93.883 64H24C10.745 64 0 53.255 0 40V24C0 10.745 10.745 0 24 0h102.529c11.401 0 21.228 8.021 23.513 19.19L159.208 64H551.99c15.401 0 26.816 14.301 23.403 29.319l-47.273 208C525.637 312.246 515.923 320 504.717 320zM408 168h-48v-40c0-8.837-7.163-16-16-16h-16c-8.837 0-16 7.163-16 16v40h-48c-8.837 0-16 7.163-16 16v16c0 8.837 7.163 16 16 16h48v40c0 8.837 7.163 16 16 16h16c8.837 0 16-7.163 16-16v-40h48c8.837 0 16-7.163 16-16v-16c0-8.837-7.163-16-16-16z"></path></svg>
+                        </label>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+              </div>
+
+              <div class="pl-96 ">
+                <div class="pl-28">
+                  <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+                    <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                      hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> <
+                    </label>
+                    </div>
+                    <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+                      <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                        hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> 1
+                      </label>
+                      </div>
+                      <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+                        <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                          hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> 2
+                        </label>
+                        </div>
+                        <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black pl-2">
+                          <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                            hover:shadow-md hover:bg-gray-100 text-blue-600 font-semibold text-xl"> 3
+                          </label>
+                          </div>
+                          <div class="dropdown dropdown-end hover:shadow-md rounded-md border-black  pl-2">
+                            <label tabindex="0" class="btn btn-square btn-ghost border-gray-200
+                              hover:shadow-md hover:bg-gray-100 text-black font-semibold text-xl"> >
+                            </label>
+                            </div>
+                          </div>
+                        </div>
 <!---->
 <div class="w-full pl-82">
   <div class="card card-side bg-base-100 shadow-xl w-full h-96">
@@ -489,9 +566,11 @@
       </div>
     </div>
   </div>
-
 </div>
+<!---->
 
+
+            <!-- PRODUCT DETAILS-->
   <div class="h-56 grid grid-cols-3 gap-4 content-start ...">
     <div>
     <h1 class="font-bold">DESCRIPTION</h1>
@@ -569,7 +648,6 @@
 
   <div class="rating rating-md">
     <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
-    <input type="radio" name="rating-7" class="mask mask-star-2 mask-half-1 bg-orange-400"  />
     <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400"  checked/>
     <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
     <input type="radio" name="rating-7" class="mask mask-star-2 bg-orange-400" />
