--- a/src/app/feature/falcon/forms/forms.component.html
+++ b/src/app/feature/falcon/forms/forms.component.html
@@ -5,12 +5,20 @@
   <div class=" absolute right-44  mt-4">
      <button class="btn btn-sm bg-gray-50 text-black w-20">Code</button>
   </div>
- <h2 class="font-medium text-xl p-4 peer">Example</h2>
+  <div class="">
+    <div class="dropdown dropdown-hover flex p-4 text-xl b">
+       <label  class="">Example</label>
+       <p  class="dropdown-content menu p-2 w-52 ml-20 -mt-2 link link-hover text-blue-600">
+        #
+       </p>
+    </div>
+   </div>
  <h2 class="p-4">Email address</h2>
  <input type="text" placeholder="Name@example.com" class="  input input-info w-11/12 ml-4 " />
  <h2 class="p-4 text-gray-800">Example textarea</h2>
  <textarea class="textarea textarea-info w-11/12 ml-4" placeholder="Bio"></textarea>
  <br>
 </div>
+
 
 
