--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -174,6 +174,7 @@
             <li><a [routerLink]="['allorden']">All Orders</a></li>
             <li><a [routerLink]="['revenues']">Revenues</a></li>
             <li><a [routerLink]="['forms']">Example</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-productDetails']">Product Details 1</a></li>
         </div>
     </div>
 </ul>
