--- a/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-details/falcon-e-commerce-product-details.component.html
+++ b/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-details/falcon-e-commerce-product-details.component.html
@@ -66,7 +66,7 @@
 
 <div class="h-56 grid grid-cols-3 gap-4 content-start ...">
   <div>
-  <h1 class="font-bold">DESCRIPTION</h1>
+  <h1 class="font-bold">Descriptions</h1>
     Over the years, Apple has built a reputation for releasing its products with a lot of fanfare - but that didn’t exactly happen for the MacBook Pro 2018. Rather, Apple’s latest pro laptop experienced a subdued launch, in spite of it offering a notable spec upgrade over the 2017 model – along with an improved idboard. And, as with previous generations the 15-inch MacBook Pro arrives alongside a 13-inch model.
 
     Apple still loves the MacBook Pro though, despite the quiet release. This is because, while the iPhone XS and iPad, along with the 12-inch MacBook, are aimed at everyday consumers, the MacBook Pro has always aimed at the creative and professional audience. This new MacBook Pro brings a level of performance (and price) unlike its more consumer-oriented devices.
@@ -80,7 +80,7 @@
   <div>
     <table class="border-collapse border border-slate-300 ... w-96 h-96">
       <thead>
-  <h1 class="font-bold">DESCRIPTION</h1>
+  <h1 class="font-bold">Specifications</h1>
         <tr>
           <td class="border border-slate-300 ... bg-gray-100">Processor</td>
           <td class="border border-slate-300 ...">2.3GHz quad-core Intel Core i5</td>
@@ -123,6 +123,7 @@
     </table>
   </div>
   <div>
+  <h1 class="font-bold">Reviews</h1>
     <tr>
       <td class=""><div class="flex items-stretch ... ">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="star" class="svg-inline--fa fa-star w-18 h-4 text-warning " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z "></path></svg>
@@ -165,14 +166,27 @@
         </td>
       <td class="pl-10">
         <div class="form-control w-full max-w-xs">
+          <h1 class="font-bold">Write your Review</h1>
+          <span class="text-gray-400 text-sm">Rating:</span>
+          <div class="rating">
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+          </div>
           <label class="label font-bold">
-            <span class="label-text text-red-600 ">Name</span>
+            <span class="label-text text-gray-400 ">Name</span>
+          </label>
+          <input type="text" class="input input-bordered w-full max-w-xs" />
+          <label class="label font-bold">
+            <span class="label-text text-gray-400 ">Email</span>
           </label>
           <input type="text" class="input input-bordered w-full max-w-xs" />
         </div>
         <div class="form-control">
           <label class="label font-bold">
-            <span class="label-text">Review:</span>
+            <span class="label-text text-gray-400">Review:</span>
           </label>
           <textarea class="textarea textarea-bordered h-24"></textarea>
         </div>
