ultimos cambios product details 1

--- a/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-details/falcon-e-commerce-product-details.component.html
+++ b/src/app/feature/falcon/e-commerce/falcon-e-commerce-product-details/falcon-e-commerce-product-details.component.html
@@ -60,11 +60,10 @@
     </div>
   </div>
 </div>
+</div>
 
-     </div>
 
-
-<div class="h-56 grid grid-cols-3 gap-4 content-start ...">
+<div class="h-56 grid grid-cols-3 gap-4 content-start ... ">
   <div>
   <h1 class="font-bold">Descriptions</h1>
     Over the years, Apple has built a reputation for releasing its products with a lot of fanfare - but that didn’t exactly happen for the MacBook Pro 2018. Rather, Apple’s latest pro laptop experienced a subdued launch, in spite of it offering a notable spec upgrade over the 2017 model – along with an improved idboard. And, as with previous generations the 15-inch MacBook Pro arrives alongside a 13-inch model.
@@ -169,7 +168,7 @@
           <h1 class="font-bold">Write your Review</h1>
           <span class="text-gray-400 text-sm">Rating:</span>
           <div class="rating">
-            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked/>
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
@@ -189,6 +188,9 @@
             <span class="label-text text-gray-400">Review:</span>
           </label>
           <textarea class="textarea textarea-bordered h-24"></textarea>
+          <div class="flex items-stretch ... py-4">
+            <div class="px-2 px-md-3 col-auto"><button type="button" class="btn btn-primary btn-sm"><span class="text-white">Submit</span></button></div>
+          </div>
         </div>
       </td>
     </tr>
