ultimos cambios de product details 2

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -175,6 +175,7 @@
             <li><a [routerLink]="['revenues']">Revenues</a></li>
             <li><a [routerLink]="['forms']">Example</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails']">Product Details 1</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-productDetails-dos']">Product-Details 2</a></li>
         </div>
     </div>
 </ul>
