cambios de product details 3

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -177,6 +177,7 @@
             <li><a [routerLink]="['forms']">Example</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails']">Product Details 1</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails-dos']">Product-Details 2</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-productDetails-tres']">Product-Details 3</a></li>
         </div>
     </div>
 </ul>
