--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -127,6 +127,7 @@
             <li><a [routerLink]="['allorden']">All Orders</a></li>
             <li><a [routerLink]="['revenues']">Revenues</a></li>
             <li><a [routerLink]="['forms']">Example</a></li>
+            <li><a [routerLink]="['profile-settings']">Profile Settings</a></li>
         </div>
     </div>
 </ul>
