--- a/src/app/feature/falcon/management/customers/customers.component.html
+++ b/src/app/feature/falcon/management/customers/customers.component.html
@@ -1,4 +1,4 @@
-<div clas="p-5">
+<div clas="flex relative stats shadow bg-gradient-to-r from-white  via-white to-orange-300 max-w-xs">
   <div class="flex">
     <span class="text-xl pt-2 pr-5 text-black">Customers</span>
     <div class="flex justify-end pt-3">
