--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -181,6 +181,7 @@
             <li><a [routerLink]="['falcon-e-commerce-productDetails']">Product Details 1</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails-dos']">Product-Details 2</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails-tres']">Product-Details 3</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-productShare']">Product-Share</a></li>
         </div>
     </div>
 </ul>
