pre finalizacion de chat

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -176,6 +176,8 @@
             <li><a [routerLink]="['revenues']">Revenues</a></li>
             <li><a [routerLink]="['forms']">Example</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails']">Product Details 1</a></li>
+            <li><a [routerLink]="['falcon-app-chat-app']">Chatt</a></li>
+
         </div>
     </div>
 </ul>
