cambios product details 7

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -184,6 +184,7 @@
             <li><a [routerLink]="['falcon-e-commerce-productDetails-cuatro']">Product-Details 4</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails-cinco']">Product-Details 5</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails-seis']">Product-Details 6</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-productDetails-siete']">Product-Details 7</a></li>
             <li><a [routerLink]="['profile-settings']">Profile Settings</a></li>
         </div>
     </div>
