--- a/src/app/feature/falcon/events/events-details/Free/free-new-years/free-new-years.component.html
+++ b/src/app/feature/falcon/events/events-details/Free/free-new-years/free-new-years.component.html
@@ -4,7 +4,10 @@
     </div>
     <div class="grid grid-cols-2 py-5">
         <div class="flex px-3">
-            <img src="https://cdn-icons-png.flaticon.com/512/2773/2773319.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Dec</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">31</div>
+            </div>
             <div class="flex flex-col gap-0.5 px-3">
                 <p class="font-medium">FREE New Year's Eve Midnight Harbor Fireworks</p>
                 <p class="text-sm">By <a class="hover:underline text-sky-500 cursor-pointer">Boston Harbor Now</a></p>
