--- a/src/app/feature/falcon/events/events-list/event-list/event-list.component.html
+++ b/src/app/feature/falcon/events/events-list/event-list/event-list.component.html
@@ -18,7 +18,10 @@
     </div>
     <div class="grid grid-cols-2 p-3">
         <div class="flex">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Mar</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">26</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">Crain's New York Business <span class="text-green-600 text-sm font-bold bg-green-200  w-8 h-5 rounded-lg hover:none">Free</span></span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">AID MIT</a> </span>
@@ -30,7 +33,10 @@
             </div>
         </div>
         <div class="flex">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Feb</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">29</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">Film Festival</span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">American Nuclear Society</a> </span>
@@ -42,7 +48,10 @@
             </div>
         </div>
         <div class="flex py-4">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Feb</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">21</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">Newmarket Nights</span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">University of Oxford</a> </span>
@@ -54,7 +63,10 @@
             </div>
         </div>
         <div class="flex py-4">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Dec</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">31</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">31st Night Celebration</span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">Chamber Music Society</a> </span>
@@ -66,7 +78,10 @@
             </div>
         </div>
         <div class="flex py-3">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Dec</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">16</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">Folk Festival</span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">Harvard University</a> </span>
