--- a/src/app/feature/falcon/events/events-details/events-like/events-may-you-like/events-may-you-like.component.html
+++ b/src/app/feature/falcon/events/events-details/events-like/events-may-you-like/events-may-you-like.component.html
@@ -6,7 +6,10 @@
     </div>
     <div class="grid grid-cols-1 p-2">
         <div class="flex">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Feb</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">21</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">Newmarket Nights</span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">University of Oxford</a> </span>
@@ -17,7 +20,10 @@
             </div>
         </div>
         <div class="flex py-2">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Dec</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">31</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">Film Festival</span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">American Nuclear Society</a> </span>
@@ -28,7 +34,10 @@
             </div>
         </div>
         <div class="flex py-2">
-            <img src="https://cdn-icons-png.flaticon.com/512/3697/3697168.png" class="w-12 h-12">
+            <div class="w-12">
+                <div class=" rounded-t-lg bg-red-500 font-medium text-white pl-2 pr-2">Dec</div>
+                <div class="rounded-b-lg border-r-2 border-b-2 border-l-2 pl-2 pr- border-red-400 text-2xl text-gray-400 font-extrabold">16</div>
+            </div>
                 <div class="flex flex-col gap-0.5">
                     <span class="px-5 text-sky-500 font-medium text-lg hover:underline hover:text-sky-600 cursor-pointer">Film Festival</span>
                     <span class="px-5 text-sm text-slate-400">Organized by <a class="hover:underline cursor-pointer">American Nuclear Society</a> </span>
