cambios de product details 9

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -186,6 +186,7 @@
             <li><a [routerLink]="['falcon-e-commerce-productDetails-seis']">Product-Details 6</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails-siete']">Product-Details 7</a></li>
             <li><a [routerLink]="['falcon-e-commerce-productDetails-ocho']">Product-Details 8</a></li>
+            <li><a [routerLink]="['falcon-e-commerce-productDetails-nueve']">Product-Details 9</a></li>
             <li><a [routerLink]="['profile-settings']">Profile Settings</a></li>
         </div>
     </div>
