--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -93,6 +93,7 @@
             <li><a [routerLink]="['falcon-dashboard-management-statistics']">Project Statistics</a></li>
             <li><a [routerLink]="['falcon-dashboard-ecommerce-orders']">Orders</a></li>
             <li><a [routerLink]="['falcon-dashboard-default-bandwidth']">Bandwidth Saved</a></li>
+            <li><a [routerLink]="['falcon-dashboard-analytics-trend-of-bounce-rate']">Trend of Bounce Rate</a></li>
             <li><a [routerLink]="['falcon-usserOnline']">Ussers Online</a></li>
             <li><a [routerLink]="['falconCRM-revenue']">Falcon-CRM-Revenue</a></li>
             <li><a [routerLink]="['falcon-dashboard-default-totalorder']">Total-Order</a></li>
