--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -128,6 +128,7 @@
             <li><a [routerLink]="['falcon-dashboard-default-TOP_PRODUCTS']">TOP PRODUCTS </a></li>
             <li><a [routerLink]="['falcon-e-commerce-pos-location']">Sales by POS location </a></li>
             <li><a [routerLink]="['falcon-social-followers']">Followers </a></li>
+            <li><a [routerLink]="['falcon-social-followers-perfil']">Followers Perfil</a></li>
             <li><a [routerLink]="['falcon-social-notifications']">Notifications</a></li>
             <li><a [routerLink]="['falcon-social-activity-log']">Activity Log</a></li>
             <li><a [routerLink]="['falcon-events-events-details-date-and-time']">Date and Time</a></li>
