--- a/src/app/feature/falcon/social/followers/falcon-social-followers-perfil/falcon-social-followers-perfil.component.html
+++ b/src/app/feature/falcon/social/followers/falcon-social-followers-perfil/falcon-social-followers-perfil.component.html
@@ -530,16 +530,16 @@
 <div class="bg-slate-50 card rounded shadow-md mt-4">
   <div class="flex flex-row p-4">
     <h1 class="grow font-semibold text-xl">Followers (25)</h1>
-    <a class="text-blue-500" href="http://localhost:4200/layout/falcon-social-followers">All Members</a>
+    <a class="text-blue-500" [routerLink]="['/layout/falcon-social-followers']">All Members</a>
   </div>
   <div class="grid grid-cols-4 gap-4 gap-x-0 gap-y-1">
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ml-0.5 ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/1.f7d5569c.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Emilia Clarke</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Emilia Clarke</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Technext limited</a>
         </p>
@@ -547,11 +547,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/2.20b1aba3.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Kit Harington</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Kit Harington</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Harvard Korea Society</a>
         </p>
@@ -559,11 +559,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/3.b3477e97.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Sophie Turner</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Sophie Turner</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Graduate Student Council</a>
         </p>
@@ -571,11 +571,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center mr-0.5">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/4.482e0311.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Peter Dinklage</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Peter Dinklage</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Art Club, MIT</a>
         </p>
@@ -583,11 +583,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ml-0.5 ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/5.3fdcffd4.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Nikolaj Coster</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Nikolaj Coster</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Archery Club, MIT</a>
         </p>
@@ -595,11 +595,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/6.73c7fce2.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Isaac Hempstead</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Isaac Hempstead</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Asymptones</a>
         </p>
@@ -607,11 +607,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/7.ad543a0e.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Alfie Allen</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Alfie Allen</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Brain Trust</a>
         </p>
@@ -619,11 +619,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center mr-0.5">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/8.f10cab45.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Iain Glen</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Iain Glen</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">GSAS Action Coalition</a>
         </p>
@@ -631,11 +631,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ml-0.5 ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/9.57c5c601.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Liam Cunningham</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Liam Cunningham</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Caving Club, MIT</a>
         </p>
@@ -643,11 +643,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/10.8575d5a9.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">John Bradley</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">John Bradley</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Chess Club</a>
         </p>
@@ -655,11 +655,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center ">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/11.6f5044d2.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Rory McCann</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Rory McCann</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Chamber Music Society</a>
         </p>
@@ -667,11 +667,11 @@
     </div>
     <div class="">
       <div class="bg-white p-3 h-100 flex flex-col items-center mr-0.5">
-        <a href="http://localhost:4200/layout/falcon-social-followers-perfil">
+        <a>
           <img src="https://falconreact.prium.me/static/media/12.c0226f68.jpg" class="mb-3 shadow-sm rounded-full img-thumbnail w-20 h-20">
         </a>
         <h6 class="mb-1">
-          <a class="text-blue-500 font-semibold link link-hover text-sm" href="http://localhost:4200/layout/falcon-social-followers-perfil">Joe Dempsie</a>
+          <a class="text-blue-500 font-semibold link link-hover text-sm">Joe Dempsie</a>
         </h6><p class="mb-1">
           <a class="text-gray-500 link link-hover text-xs">Clubchem</a>
         </p>
